Fix the position of the course dropdown in the top bar on mobile
In the navigation top bar of the site, the course dropdown menu
was slightly incorrectly positioned on small screens (width below 768px).
The dropdown toggle link was not exactly aligned with the brand name.

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 .navbar-dropdown {
 	@extend .navbar-nav;
-	display: inline-block;
+	margin: 0;
+	float: left;
 }
 
 .topbar {
@@ -22,6 +23,11 @@
 
 		color: #ffffff;
 		background: transparent;
+	}
+
+	.navbar-dropdown > li.dropdown > a.dropdown-toggle {
+		padding-top: $navbar-padding-vertical;
+		padding-bottom: $navbar-padding-vertical;
 	}
 
 	a.navbar-brand:hover,
